// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs Component Snapshots > renders Tailwind Tabs correctly 1`] = `
{
  "README.md": "# Tabs

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`underline\`- \`pills\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`disabled\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --form-group-gap: calc(var(--spacing-unit) * 5);
  --form-item-gap: calc(var(--spacing-unit) * 1.5);
  --form-label-color: var(--color-text);
  --form-label-weight: 500;
  --form-required-color: var(--color-destructive);
  --form-control-height-sm: calc(var(--spacing-unit) * 9);
  --form-control-height-md: calc(var(--spacing-unit) * 10);
  --form-control-height-lg: calc(var(--spacing-unit) * 11);
  --form-error-color: var(--color-destructive);
  --form-description-color: var(--color-text-muted);
  --form-description-size: 0.75rem;
  --form-radius: var(--radius-md);
  --form-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --tooltip-background: var(--color-surface);
  --tooltip-border: var(--color-border);
  --tooltip-text: var(--color-text);
  --tooltip-shadow: 0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -1px rgba(0,0,0,0.06);
  --tooltip-radius: var(--radius-md);
  --tooltip-padding: calc(var(--spacing-unit) * 2);
  --tooltip-z-index: 60;
  --toast-background: var(--color-surface);
  --toast-border: var(--color-border);
  --toast-text: var(--color-text);
  --toast-text-muted: var(--color-text-muted);
  --toast-radius: var(--radius-md);
  --toast-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --toast-padding: calc(var(--spacing-unit) * 4);
  --toast-gap: calc(var(--spacing-unit) * 2);
  --toast-z-index: 9999;
  --toast-success-bg: var(--color-success);
  --toast-error-bg: var(--color-destructive);
  --toast-warning-bg: #f59e0b;
  --toast-info-bg: var(--color-primary);
  --label-color: var(--color-text);
  --label-weight: 500;
  --label-required-color: var(--color-destructive);
  --label-gap: calc(var(--spacing-unit) * 1);
  --label-disabled-opacity: 0.6;
  --separator-color: var(--color-border);
  --separator-thickness: 1px;
  --separator-spacing: calc(var(--spacing-unit) * 2);
  --separator-label-color: var(--color-text-muted);
  --separator-label-gap: calc(var(--spacing-unit) * 2);
  --badge-radius: var(--radius-sm);
  --badge-font-size: 0.75rem;
  --badge-font-weight: 500;
  --badge-gap: calc(var(--spacing-unit) * 1);
  --badge-primary-bg: var(--color-primary);
  --badge-secondary-bg: var(--color-secondary);
  --badge-success-bg: var(--color-success);
  --badge-warning-bg: #f59e0b;
  --badge-destructive-bg: var(--color-destructive);
  --badge-on-color: #ffffff;
  --skeleton-base-color: var(--color-secondary);
  --skeleton-highlight-color: var(--color-background);
  --skeleton-radius: var(--radius-md);
  --skeleton-duration: 1.5s;
  --avatar-radius: var(--radius-md);
  --avatar-fallback-bg: var(--color-secondary);
  --avatar-fallback-color: var(--color-text);
  --avatar-font-weight: 600;
  --textarea-min-height: calc(var(--spacing-unit) * 20);
  --textarea-padding-x: calc(var(--spacing-unit) * 3);
  --textarea-padding-y: calc(var(--spacing-unit) * 2);
  --textarea-radius: var(--radius-md);
  --textarea-border-color: var(--color-border);
  --textarea-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --checkbox-size: calc(var(--spacing-unit) * 4);
  --checkbox-radius: var(--radius-sm);
  --checkbox-accent: var(--color-primary);
  --checkbox-label-color: var(--color-text);
  --checkbox-gap: calc(var(--spacing-unit) * 2);
  --switch-track-off: var(--color-secondary);
  --switch-track-on: var(--color-primary);
  --switch-thumb: #ffffff;
  --switch-transition: background-color 0.2s ease, transform 0.2s ease;
  --switch-label-color: var(--color-text);
  --switch-gap: calc(var(--spacing-unit) * 2);
  --alert-padding: calc(var(--spacing-unit) * 3);
  --alert-radius: var(--radius-md);
  --alert-gap: calc(var(--spacing-unit) * 3);
  --alert-info-accent: var(--color-primary);
  --alert-success-accent: var(--color-success);
  --alert-warning-accent: #f59e0b;
  --alert-destructive-accent: var(--color-destructive);
  --progress-radius: 9999px;
  --progress-track-bg: var(--color-secondary);
  --progress-bar-bg: var(--color-primary);
  --progress-transition: width 0.3s ease;
  --breadcrumb-gap: calc(var(--spacing-unit) * 2);
  --breadcrumb-link-color: var(--color-text-muted);
  --breadcrumb-active-color: var(--color-text);
  --breadcrumb-separator-color: var(--color-text-muted);
  --radio-size: calc(var(--spacing-unit) * 4);
  --radio-accent: var(--color-primary);
  --radio-label-color: var(--color-text);
  --radio-gap: calc(var(--spacing-unit) * 2);
  --radio-group-gap: calc(var(--spacing-unit) * 2);
  --accordion-border-color: var(--color-border);
  --accordion-trigger-color: var(--color-text);
  --accordion-trigger-hover-bg: var(--color-secondary);
  --accordion-trigger-padding-y: calc(var(--spacing-unit) * 3);
  --accordion-trigger-padding-x: calc(var(--spacing-unit) * 2);
  --accordion-content-padding-y: calc(var(--spacing-unit) * 3);
  --accordion-radius: var(--radius-md);
  --accordion-transition: background-color 0.2s ease;
  --tabs-list-gap: calc(var(--spacing-unit) * 1);
  --tabs-trigger-height-sm: calc(var(--spacing-unit) * 8);
  --tabs-trigger-height-md: calc(var(--spacing-unit) * 9);
  --tabs-trigger-height-lg: calc(var(--spacing-unit) * 11);
  --tabs-trigger-padding-x: calc(var(--spacing-unit) * 3);
  --tabs-trigger-radius: var(--radius-md);
  --tabs-trigger-color: var(--color-text-muted);
  --tabs-trigger-active-color: var(--color-text);
  --tabs-trigger-hover-bg: var(--color-secondary);
  --tabs-trigger-active-bg: var(--color-surface);
  --tabs-trigger-active-indicator: var(--color-primary);
  --tabs-indicator-thickness: 2px;
  --tabs-content-padding-y: calc(var(--spacing-unit) * 4);
  --tabs-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
  "Tabs.tsx": "import React, {
  createContext,
  useContext,
  useState,
  useMemo,
  useCallback,
  useEffect,
  useRef,
  useId,
} from 'react';

export type TabsSize = 'sm' | 'md' | 'lg';
export type TabsVariant = 'default' | 'underline' | 'pills';
export type TabsOrientation = 'horizontal' | 'vertical';
export type TabsActivationMode = 'manual' | 'automatic';

export interface TabsOptions {
  value?: string;
  defaultValue?: string;
  onValueChange?: (value: string) => void;
  orientation?: TabsOrientation;
  activationMode?: TabsActivationMode;
}

interface TriggerRegistration {
  value: string;
  disabled: boolean;
  el: HTMLButtonElement | null;
}

export function useTabs({
  value: controlledValue,
  defaultValue,
  onValueChange,
  orientation = 'horizontal',
  activationMode = 'manual',
}: TabsOptions = {}) {
  const [uncontrolledValue, setUncontrolledValue] = useState<string | undefined>(defaultValue);
  const value = controlledValue ?? uncontrolledValue;
  const rootId = useId();
  const triggersRef = useRef<Map<string, TriggerRegistration>>(new Map());
  const orderRef = useRef<string[]>([]);

  const setValue = useCallback(
    (next: string) => {
      if (controlledValue === undefined) {
        setUncontrolledValue(next);
      }
      onValueChange?.(next);
    },
    [controlledValue, onValueChange]
  );

  const registerTrigger = useCallback(
    (val: string, disabled: boolean, el: HTMLButtonElement | null) => {
      const map = triggersRef.current;
      if (el === null) {
        map.delete(val);
        orderRef.current = orderRef.current.filter((v) => v !== val);
        return;
      }
      if (!map.has(val)) {
        orderRef.current.push(val);
      }
      map.set(val, { value: val, disabled, el });
    },
    []
  );

  const focusTrigger = useCallback((val: string) => {
    const entry = triggersRef.current.get(val);
    entry?.el?.focus();
  }, []);

  const moveFocus = useCallback(
    (current: string, direction: 1 | -1) => {
      const order = orderRef.current;
      const enabled = order.filter((v) => !triggersRef.current.get(v)?.disabled);
      if (enabled.length === 0) return null;
      const idx = enabled.indexOf(current);
      const nextIdx = idx === -1 ? 0 : (idx + direction + enabled.length) % enabled.length;
      const next = enabled[nextIdx];
      focusTrigger(next);
      return next;
    },
    [focusTrigger]
  );

  const focusEdge = useCallback(
    (edge: 'first' | 'last') => {
      const enabled = orderRef.current.filter((v) => !triggersRef.current.get(v)?.disabled);
      if (enabled.length === 0) return null;
      const next = edge === 'first' ? enabled[0] : enabled[enabled.length - 1];
      focusTrigger(next);
      return next;
    },
    [focusTrigger]
  );

  return useMemo(
    () => ({
      value,
      setValue,
      orientation,
      activationMode,
      rootId,
      registerTrigger,
      focusTrigger,
      moveFocus,
      focusEdge,
    }),
    [value, setValue, orientation, activationMode, rootId, registerTrigger, focusTrigger, moveFocus, focusEdge]
  );
}

type TabsContextType = ReturnType<typeof useTabs> | null;
const TabsContext = createContext<TabsContextType>(null);

const useTabsContext = () => {
  const context = useContext(TabsContext);
  if (context == null) {
    throw new Error('Tabs components must be wrapped in <Tabs.Root />');
  }
  return context;
};

const buildTriggerId = (rootId: string, value: string) =>
  \`\${rootId}-trigger-\${value.replace(/[^a-zA-Z0-9_-]/g, '_')}\`;
const buildContentId = (rootId: string, value: string) =>
  \`\${rootId}-content-\${value.replace(/[^a-zA-Z0-9_-]/g, '_')}\`;

const cn = (...parts: Array<string | false | null | undefined>) =>
  parts.filter(Boolean).join(' ');

const ROOT_BASE = 'flex w-full data-[orientation=vertical]:flex-row data-[orientation=horizontal]:flex-col data-[orientation=vertical]:items-start';

const LIST_BASE = 'flex flex-row items-center gap-[var(--tabs-list-gap,4px)] shrink-0 data-[orientation=vertical]:flex-col data-[orientation=vertical]:items-stretch';

const TRIGGER_BASE = [
  'inline-flex items-center justify-center whitespace-nowrap',
  'px-[var(--tabs-trigger-padding-x,12px)]',
  'rounded-[var(--tabs-trigger-radius,6px)]',
  'text-[var(--tabs-trigger-color,var(--color-text-muted))]',
  'text-sm font-medium',
  'transition-colors',
  'disabled:opacity-50 disabled:cursor-not-allowed',
  'data-[disabled]:opacity-50 data-[disabled]:cursor-not-allowed',
  'hover:not-data-[disabled]:not-data-[state=active]:bg-[var(--tabs-trigger-hover-bg,var(--color-secondary))]',
  'data-[state=active]:text-[var(--tabs-trigger-active-color,var(--color-text))]',
  'focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-[var(--color-primary)]',
].join(' ');

const VARIANT_LIST: Record<TabsVariant, string> = {
  default: 'border-b border-[var(--color-border)]',
  underline: 'border-b border-[var(--color-border)]',
  pills: '',
};

const VARIANT_TRIGGER_ACTIVE: Record<TabsVariant, string> = {
  default: 'data-[state=active]:shadow-[inset_0_-2px_0_var(--tabs-trigger-active-indicator,var(--color-primary))]',
  underline: 'data-[state=active]:shadow-[inset_0_-2px_0_var(--tabs-trigger-active-indicator,var(--color-primary))] !rounded-none',
  pills: 'data-[state=active]:bg-[var(--tabs-trigger-active-bg,var(--color-surface))] data-[state=active]:shadow-sm',
};

const SIZE_TRIGGER: Record<TabsSize, string> = {
  sm: 'h-[var(--tabs-trigger-h,32px)] text-[0.8125rem]',
  md: 'h-[var(--tabs-trigger-h,36px)] text-sm',
  lg: 'h-[var(--tabs-trigger-h,44px)] text-[0.9375rem]',
};

const CONTENT_BASE = 'flex-1 py-[var(--tabs-content-padding-y,16px)] text-[var(--color-text)] outline-none data-[orientation=vertical]:py-0 data-[orientation=vertical]:px-[var(--tabs-content-padding-y,16px)]';

/**
 * Internal Tabs Components
 */
export interface TabsRootProps extends TabsOptions {
  children: React.ReactNode;
  variant?: TabsVariant;
  size?: TabsSize;
  className?: string;
}

const InternalRoot = React.forwardRef<HTMLDivElement, TabsRootProps>(
  function TabsRoot(
    { children, variant = 'default', size = 'md', className, ...options },
    ref
  ) {
    const tabs = useTabs(options);
    return (
      <TabsContext.Provider value={tabs}>
        <div
          ref={ref}
          className={cn(ROOT_BASE, className)}
          data-orientation={tabs.orientation}
          data-variant={variant}
          data-size={size}
        >
          {children}
        </div>
      </TabsContext.Provider>
    );
  }
);

export interface TabsListProps extends React.HTMLAttributes<HTMLDivElement> {}

const InternalList = React.forwardRef<HTMLDivElement, TabsListProps>(
  function TabsList({ children, className, onKeyDown, ...props }, ref) {
    const ctx = useTabsContext();

    const handleKeyDown = (e: React.KeyboardEvent<HTMLDivElement>) => {
      onKeyDown?.(e);
      if (e.defaultPrevented) return;

      const target = e.target as HTMLElement;
      const currentValue = target.getAttribute('data-value') ?? ctx.value ?? '';

      const isHorizontal = ctx.orientation === 'horizontal';
      const nextKey = isHorizontal ? 'ArrowRight' : 'ArrowDown';
      const prevKey = isHorizontal ? 'ArrowLeft' : 'ArrowUp';

      let nextValue: string | null = null;

      if (e.key === nextKey) {
        e.preventDefault();
        nextValue = ctx.moveFocus(currentValue, 1);
      } else if (e.key === prevKey) {
        e.preventDefault();
        nextValue = ctx.moveFocus(currentValue, -1);
      } else if (e.key === 'Home') {
        e.preventDefault();
        nextValue = ctx.focusEdge('first');
      } else if (e.key === 'End') {
        e.preventDefault();
        nextValue = ctx.focusEdge('last');
      }

      if (nextValue && ctx.activationMode === 'automatic') {
        ctx.setValue(nextValue);
      }
    };

    const variant = (props as any)['data-variant'] as TabsVariant | undefined;

    return (
      <div
        ref={ref}
        role="tablist"
        aria-orientation={ctx.orientation}
        data-orientation={ctx.orientation}
        className={cn(LIST_BASE, variant ? VARIANT_LIST[variant] : '', className)}
        onKeyDown={handleKeyDown}
        {...props}
      >
        {children}
      </div>
    );
  }
);

export interface TabsTriggerProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
  value: string;
  variant?: TabsVariant;
  size?: TabsSize;
}

const InternalTrigger = React.forwardRef<HTMLButtonElement, TabsTriggerProps>(
  function TabsTrigger(
    { value, disabled = false, className, onClick, children, variant = 'default', size = 'md', ...props },
    propRef
  ) {
    const ctx = useTabsContext();
    const isActive = ctx.value === value;
    const innerRef = useRef<HTMLButtonElement | null>(null);

    const setRef = useCallback(
      (el: HTMLButtonElement | null) => {
        innerRef.current = el;
        if (typeof propRef === 'function') propRef(el);
        else if (propRef) (propRef as React.MutableRefObject<HTMLButtonElement | null>).current = el;
        ctx.registerTrigger(value, disabled, el);
      },
      [ctx, value, disabled, propRef]
    );

    useEffect(() => () => ctx.registerTrigger(value, disabled, null), [ctx, value, disabled]);

    const handleClick = (e: React.MouseEvent<HTMLButtonElement>) => {
      onClick?.(e);
      if (e.defaultPrevented || disabled) return;
      ctx.setValue(value);
    };

    return (
      <button
        ref={setRef}
        type="button"
        role="tab"
        id={buildTriggerId(ctx.rootId, value)}
        aria-selected={isActive}
        aria-controls={buildContentId(ctx.rootId, value)}
        data-state={isActive ? 'active' : 'inactive'}
        data-value={value}
        data-disabled={disabled || undefined}
        disabled={disabled}
        tabIndex={isActive ? 0 : -1}
        className={cn(TRIGGER_BASE, SIZE_TRIGGER[size], VARIANT_TRIGGER_ACTIVE[variant], className)}
        onClick={handleClick}
        {...props}
      >
        {children}
      </button>
    );
  }
);

export interface TabsContentProps extends React.HTMLAttributes<HTMLDivElement> {
  value: string;
  forceMount?: boolean;
}

const InternalContent = React.forwardRef<HTMLDivElement, TabsContentProps>(
  function TabsContent({ value, forceMount = false, className, children, ...props }, ref) {
    const ctx = useTabsContext();
    const isActive = ctx.value === value;

    if (!isActive && !forceMount) {
      return null;
    }

    return (
      <div
        ref={ref}
        role="tabpanel"
        id={buildContentId(ctx.rootId, value)}
        aria-labelledby={buildTriggerId(ctx.rootId, value)}
        data-state={isActive ? 'active' : 'inactive'}
        data-orientation={ctx.orientation}
        hidden={!isActive}
        tabIndex={0}
        className={cn(CONTENT_BASE, className)}
        {...props}
      >
        {children}
      </div>
    );
  }
);

InternalRoot.displayName = 'Tabs.Root';
InternalList.displayName = 'Tabs.List';
InternalTrigger.displayName = 'Tabs.Trigger';
InternalContent.displayName = 'Tabs.Content';

export const TabsRoot = InternalRoot;
export const TabsList = InternalList;
export const TabsTrigger = InternalTrigger;
export const TabsContent = InternalContent;

export const Tabs = Object.assign(TabsRoot, {
  Root: TabsRoot,
  List: TabsList,
  Trigger: TabsTrigger,
  Content: TabsContent,
});
",
}
`;

exports[`Tabs Component Snapshots > renders compound Tabs correctly 1`] = `
{
  "README.md": "# Tabs

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`underline\`- \`pills\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`disabled\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --form-group-gap: calc(var(--spacing-unit) * 5);
  --form-item-gap: calc(var(--spacing-unit) * 1.5);
  --form-label-color: var(--color-text);
  --form-label-weight: 500;
  --form-required-color: var(--color-destructive);
  --form-control-height-sm: calc(var(--spacing-unit) * 9);
  --form-control-height-md: calc(var(--spacing-unit) * 10);
  --form-control-height-lg: calc(var(--spacing-unit) * 11);
  --form-error-color: var(--color-destructive);
  --form-description-color: var(--color-text-muted);
  --form-description-size: 0.75rem;
  --form-radius: var(--radius-md);
  --form-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --tooltip-background: var(--color-surface);
  --tooltip-border: var(--color-border);
  --tooltip-text: var(--color-text);
  --tooltip-shadow: 0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -1px rgba(0,0,0,0.06);
  --tooltip-radius: var(--radius-md);
  --tooltip-padding: calc(var(--spacing-unit) * 2);
  --tooltip-z-index: 60;
  --toast-background: var(--color-surface);
  --toast-border: var(--color-border);
  --toast-text: var(--color-text);
  --toast-text-muted: var(--color-text-muted);
  --toast-radius: var(--radius-md);
  --toast-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --toast-padding: calc(var(--spacing-unit) * 4);
  --toast-gap: calc(var(--spacing-unit) * 2);
  --toast-z-index: 9999;
  --toast-success-bg: var(--color-success);
  --toast-error-bg: var(--color-destructive);
  --toast-warning-bg: #f59e0b;
  --toast-info-bg: var(--color-primary);
  --label-color: var(--color-text);
  --label-weight: 500;
  --label-required-color: var(--color-destructive);
  --label-gap: calc(var(--spacing-unit) * 1);
  --label-disabled-opacity: 0.6;
  --separator-color: var(--color-border);
  --separator-thickness: 1px;
  --separator-spacing: calc(var(--spacing-unit) * 2);
  --separator-label-color: var(--color-text-muted);
  --separator-label-gap: calc(var(--spacing-unit) * 2);
  --badge-radius: var(--radius-sm);
  --badge-font-size: 0.75rem;
  --badge-font-weight: 500;
  --badge-gap: calc(var(--spacing-unit) * 1);
  --badge-primary-bg: var(--color-primary);
  --badge-secondary-bg: var(--color-secondary);
  --badge-success-bg: var(--color-success);
  --badge-warning-bg: #f59e0b;
  --badge-destructive-bg: var(--color-destructive);
  --badge-on-color: #ffffff;
  --skeleton-base-color: var(--color-secondary);
  --skeleton-highlight-color: var(--color-background);
  --skeleton-radius: var(--radius-md);
  --skeleton-duration: 1.5s;
  --avatar-radius: var(--radius-md);
  --avatar-fallback-bg: var(--color-secondary);
  --avatar-fallback-color: var(--color-text);
  --avatar-font-weight: 600;
  --textarea-min-height: calc(var(--spacing-unit) * 20);
  --textarea-padding-x: calc(var(--spacing-unit) * 3);
  --textarea-padding-y: calc(var(--spacing-unit) * 2);
  --textarea-radius: var(--radius-md);
  --textarea-border-color: var(--color-border);
  --textarea-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --checkbox-size: calc(var(--spacing-unit) * 4);
  --checkbox-radius: var(--radius-sm);
  --checkbox-accent: var(--color-primary);
  --checkbox-label-color: var(--color-text);
  --checkbox-gap: calc(var(--spacing-unit) * 2);
  --switch-track-off: var(--color-secondary);
  --switch-track-on: var(--color-primary);
  --switch-thumb: #ffffff;
  --switch-transition: background-color 0.2s ease, transform 0.2s ease;
  --switch-label-color: var(--color-text);
  --switch-gap: calc(var(--spacing-unit) * 2);
  --alert-padding: calc(var(--spacing-unit) * 3);
  --alert-radius: var(--radius-md);
  --alert-gap: calc(var(--spacing-unit) * 3);
  --alert-info-accent: var(--color-primary);
  --alert-success-accent: var(--color-success);
  --alert-warning-accent: #f59e0b;
  --alert-destructive-accent: var(--color-destructive);
  --progress-radius: 9999px;
  --progress-track-bg: var(--color-secondary);
  --progress-bar-bg: var(--color-primary);
  --progress-transition: width 0.3s ease;
  --breadcrumb-gap: calc(var(--spacing-unit) * 2);
  --breadcrumb-link-color: var(--color-text-muted);
  --breadcrumb-active-color: var(--color-text);
  --breadcrumb-separator-color: var(--color-text-muted);
  --radio-size: calc(var(--spacing-unit) * 4);
  --radio-accent: var(--color-primary);
  --radio-label-color: var(--color-text);
  --radio-gap: calc(var(--spacing-unit) * 2);
  --radio-group-gap: calc(var(--spacing-unit) * 2);
  --accordion-border-color: var(--color-border);
  --accordion-trigger-color: var(--color-text);
  --accordion-trigger-hover-bg: var(--color-secondary);
  --accordion-trigger-padding-y: calc(var(--spacing-unit) * 3);
  --accordion-trigger-padding-x: calc(var(--spacing-unit) * 2);
  --accordion-content-padding-y: calc(var(--spacing-unit) * 3);
  --accordion-radius: var(--radius-md);
  --accordion-transition: background-color 0.2s ease;
  --tabs-list-gap: calc(var(--spacing-unit) * 1);
  --tabs-trigger-height-sm: calc(var(--spacing-unit) * 8);
  --tabs-trigger-height-md: calc(var(--spacing-unit) * 9);
  --tabs-trigger-height-lg: calc(var(--spacing-unit) * 11);
  --tabs-trigger-padding-x: calc(var(--spacing-unit) * 3);
  --tabs-trigger-radius: var(--radius-md);
  --tabs-trigger-color: var(--color-text-muted);
  --tabs-trigger-active-color: var(--color-text);
  --tabs-trigger-hover-bg: var(--color-secondary);
  --tabs-trigger-active-bg: var(--color-surface);
  --tabs-trigger-active-indicator: var(--color-primary);
  --tabs-indicator-thickness: 2px;
  --tabs-content-padding-y: calc(var(--spacing-unit) * 4);
  --tabs-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
  "Tabs.module.css": ".root {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.root[data-orientation='vertical'] {
  flex-direction: row;
  align-items: flex-start;
}

.list {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: var(--tabs-list-gap, calc(var(--spacing-unit) * 1));
  flex-shrink: 0;
}

.root[data-orientation='vertical'] .list {
  flex-direction: column;
  align-items: stretch;
}

.trigger {
  all: unset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  height: var(--tabs-trigger-h, calc(var(--spacing-unit) * 9));
  padding: 0 var(--tabs-trigger-padding-x, calc(var(--spacing-unit) * 3));
  border-radius: var(--tabs-trigger-radius, var(--radius-md));
  color: var(--tabs-trigger-color, var(--color-text-muted));
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
  font-size: 0.875rem;
  font-weight: 500;
  white-space: nowrap;
  transition: var(--tabs-transition, background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease);
}

.trigger:hover:not([data-disabled]):not([data-state='active']) {
  background-color: var(--tabs-trigger-hover-bg, var(--color-secondary));
  color: var(--tabs-trigger-active-color, var(--color-text));
}

.trigger[data-state='active'] {
  color: var(--tabs-trigger-active-color, var(--color-text));
}

.trigger[data-disabled] {
  opacity: 0.5;
  cursor: not-allowed;
}

.trigger:focus-visible {
  outline: 2px solid var(--color-primary);
  outline-offset: 3px;
}

/* Variants */
.variant-default .list {
  border-bottom: 1px solid var(--color-border, #e5e7eb);
}

.variant-default .trigger[data-state='active'] {
  box-shadow: inset 0 calc(-1 * var(--tabs-indicator-thickness, 2px)) 0
    var(--tabs-trigger-active-indicator, var(--color-primary));
}

.root[data-orientation='vertical'].variant-default .list {
  border-bottom: none;
  border-right: 1px solid var(--color-border, #e5e7eb);
}

.root[data-orientation='vertical'].variant-default .trigger[data-state='active'] {
  box-shadow: inset calc(-1 * var(--tabs-indicator-thickness, 2px)) 0 0
    var(--tabs-trigger-active-indicator, var(--color-primary));
}

.variant-underline .list {
  border-bottom: 1px solid var(--color-border, #e5e7eb);
}

.variant-underline .trigger {
  border-radius: 0;
}

.variant-underline .trigger[data-state='active'] {
  box-shadow: inset 0 calc(-1 * var(--tabs-indicator-thickness, 2px)) 0
    var(--tabs-trigger-active-indicator, var(--color-primary));
}

.variant-pills .trigger[data-state='active'] {
  background-color: var(--tabs-trigger-active-bg, var(--color-surface));
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
}

/* Sizes */
.size-sm .trigger {
  height: var(--tabs-trigger-h, calc(var(--spacing-unit) * 8));
  font-size: 0.8125rem;
}

.size-md .trigger {
  height: var(--tabs-trigger-h, calc(var(--spacing-unit) * 9));
  font-size: 0.875rem;
}

.size-lg .trigger {
  height: var(--tabs-trigger-h, calc(var(--spacing-unit) * 11));
  font-size: 0.9375rem;
}

.content {
  flex: 1;
  padding-block: var(--tabs-content-padding-y, calc(var(--spacing-unit) * 4));
  color: var(--color-text, #1A1A2E);
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
  outline: none;
}

.root[data-orientation='vertical'] .content {
  padding-block: 0;
  padding-inline: var(--tabs-content-padding-y, calc(var(--spacing-unit) * 4));
}

.content[hidden] {
  display: none;
}

@media (prefers-reduced-motion: reduce) {
  .trigger {
    transition: none;
  }
}
",
  "Tabs.tsx": "import React, {
  createContext,
  useContext,
  useState,
  useMemo,
  useCallback,
  useEffect,
  useRef,
  useId,
} from 'react';
import styles from './Tabs.module.css';
export type TabsSize = 'sm' | 'md' | 'lg';
export type TabsVariant = 'default' | 'underline' | 'pills';
export type TabsOrientation = 'horizontal' | 'vertical';
export type TabsActivationMode = 'manual' | 'automatic';

export interface TabsOptions {
  value?: string;
  defaultValue?: string;
  onValueChange?: (value: string) => void;
  orientation?: TabsOrientation;
  activationMode?: TabsActivationMode;
}

interface TriggerRegistration {
  value: string;
  disabled: boolean;
  el: HTMLButtonElement | null;
}

export function useTabs({
  value: controlledValue,
  defaultValue,
  onValueChange,
  orientation = 'horizontal',
  activationMode = 'manual',
}: TabsOptions = {}) {
  const [uncontrolledValue, setUncontrolledValue] = useState<string | undefined>(defaultValue);
  const value = controlledValue ?? uncontrolledValue;
  const rootId = useId();
  const triggersRef = useRef<Map<string, TriggerRegistration>>(new Map());
  const orderRef = useRef<string[]>([]);

  const setValue = useCallback(
    (next: string) => {
      if (controlledValue === undefined) {
        setUncontrolledValue(next);
      }
      onValueChange?.(next);
    },
    [controlledValue, onValueChange]
  );

  const registerTrigger = useCallback(
    (val: string, disabled: boolean, el: HTMLButtonElement | null) => {
      const map = triggersRef.current;
      if (el === null) {
        map.delete(val);
        orderRef.current = orderRef.current.filter((v) => v !== val);
        return;
      }
      if (!map.has(val)) {
        orderRef.current.push(val);
      }
      map.set(val, { value: val, disabled, el });
    },
    []
  );

  const focusTrigger = useCallback((val: string) => {
    const entry = triggersRef.current.get(val);
    entry?.el?.focus();
  }, []);

  const moveFocus = useCallback(
    (current: string, direction: 1 | -1) => {
      const order = orderRef.current;
      const enabled = order.filter((v) => !triggersRef.current.get(v)?.disabled);
      if (enabled.length === 0) return null;
      const idx = enabled.indexOf(current);
      const nextIdx = idx === -1 ? 0 : (idx + direction + enabled.length) % enabled.length;
      const next = enabled[nextIdx];
      focusTrigger(next);
      return next;
    },
    [focusTrigger]
  );

  const focusEdge = useCallback(
    (edge: 'first' | 'last') => {
      const enabled = orderRef.current.filter((v) => !triggersRef.current.get(v)?.disabled);
      if (enabled.length === 0) return null;
      const next = edge === 'first' ? enabled[0] : enabled[enabled.length - 1];
      focusTrigger(next);
      return next;
    },
    [focusTrigger]
  );

  return useMemo(
    () => ({
      value,
      setValue,
      orientation,
      activationMode,
      rootId,
      registerTrigger,
      focusTrigger,
      moveFocus,
      focusEdge,
    }),
    [value, setValue, orientation, activationMode, rootId, registerTrigger, focusTrigger, moveFocus, focusEdge]
  );
}

type TabsContextType = ReturnType<typeof useTabs> | null;
const TabsContext = createContext<TabsContextType>(null);

const useTabsContext = () => {
  const context = useContext(TabsContext);
  if (context == null) {
    throw new Error('Tabs components must be wrapped in <Tabs.Root />');
  }
  return context;
};

const buildTriggerId = (rootId: string, value: string) =>
  \`\${rootId}-trigger-\${value.replace(/[^a-zA-Z0-9_-]/g, '_')}\`;
const buildContentId = (rootId: string, value: string) =>
  \`\${rootId}-content-\${value.replace(/[^a-zA-Z0-9_-]/g, '_')}\`;

const joinClasses = (...parts: Array<string | false | null | undefined>) =>
  parts.filter(Boolean).join(' ');

/**
 * Internal Tabs Components
 */
export interface TabsRootProps extends TabsOptions {
  children: React.ReactNode;
  variant?: TabsVariant;
  size?: TabsSize;
  className?: string;
}

const InternalRoot = React.forwardRef<HTMLDivElement, TabsRootProps>(
  function TabsRoot(
    { children, variant = 'default', size = 'md', className, ...options },
    ref
  ) {
    const tabs = useTabs(options);
    return (
      <TabsContext.Provider value={tabs}>
        <div
          ref={ref}
          className={joinClasses(
            styles.root,
            styles[\`variant-\${variant}\`],
            styles[\`size-\${size}\`],
            className
          )}
          data-orientation={tabs.orientation}
        >
          {children}
        </div>
      </TabsContext.Provider>
    );
  }
);

export interface TabsListProps extends React.HTMLAttributes<HTMLDivElement> {
  loop?: boolean;
}

const InternalList = React.forwardRef<HTMLDivElement, TabsListProps>(
  function TabsList({ children, className, onKeyDown, ...props }, ref) {
    const ctx = useTabsContext();

    const handleKeyDown = (e: React.KeyboardEvent<HTMLDivElement>) => {
      onKeyDown?.(e);
      if (e.defaultPrevented) return;

      const target = e.target as HTMLElement;
      const currentValue = target.getAttribute('data-value') ?? ctx.value ?? '';

      const isHorizontal = ctx.orientation === 'horizontal';
      const nextKey = isHorizontal ? 'ArrowRight' : 'ArrowDown';
      const prevKey = isHorizontal ? 'ArrowLeft' : 'ArrowUp';

      let nextValue: string | null = null;

      if (e.key === nextKey) {
        e.preventDefault();
        nextValue = ctx.moveFocus(currentValue, 1);
      } else if (e.key === prevKey) {
        e.preventDefault();
        nextValue = ctx.moveFocus(currentValue, -1);
      } else if (e.key === 'Home') {
        e.preventDefault();
        nextValue = ctx.focusEdge('first');
      } else if (e.key === 'End') {
        e.preventDefault();
        nextValue = ctx.focusEdge('last');
      }

      if (nextValue && ctx.activationMode === 'automatic') {
        ctx.setValue(nextValue);
      }
    };

    return (
      <div
        ref={ref}
        role="tablist"
        aria-orientation={ctx.orientation}
        className={joinClasses(styles.list, className)}
        onKeyDown={handleKeyDown}
        {...props}
      >
        {children}
      </div>
    );
  }
);

export interface TabsTriggerProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
  value: string;
}

const InternalTrigger = React.forwardRef<HTMLButtonElement, TabsTriggerProps>(
  function TabsTrigger(
    { value, disabled = false, className, onClick, children, ...props },
    propRef
  ) {
    const ctx = useTabsContext();
    const isActive = ctx.value === value;
    const innerRef = useRef<HTMLButtonElement | null>(null);

    const setRef = useCallback(
      (el: HTMLButtonElement | null) => {
        innerRef.current = el;
        if (typeof propRef === 'function') propRef(el);
        else if (propRef) (propRef as React.MutableRefObject<HTMLButtonElement | null>).current = el;
        ctx.registerTrigger(value, disabled, el);
      },
      [ctx, value, disabled, propRef]
    );

    useEffect(() => () => ctx.registerTrigger(value, disabled, null), [ctx, value, disabled]);

    const handleClick = (e: React.MouseEvent<HTMLButtonElement>) => {
      onClick?.(e);
      if (e.defaultPrevented || disabled) return;
      ctx.setValue(value);
    };

    return (
      <button
        ref={setRef}
        type="button"
        role="tab"
        id={buildTriggerId(ctx.rootId, value)}
        aria-selected={isActive}
        aria-controls={buildContentId(ctx.rootId, value)}
        data-state={isActive ? 'active' : 'inactive'}
        data-value={value}
        data-disabled={disabled || undefined}
        disabled={disabled}
        tabIndex={isActive ? 0 : -1}
        className={joinClasses(styles.trigger, className)}
        onClick={handleClick}
        {...props}
      >
        {children}
      </button>
    );
  }
);

export interface TabsContentProps extends React.HTMLAttributes<HTMLDivElement> {
  value: string;
  forceMount?: boolean;
}

const InternalContent = React.forwardRef<HTMLDivElement, TabsContentProps>(
  function TabsContent({ value, forceMount = false, className, children, ...props }, ref) {
    const ctx = useTabsContext();
    const isActive = ctx.value === value;

    if (!isActive && !forceMount) {
      return null;
    }

    return (
      <div
        ref={ref}
        role="tabpanel"
        id={buildContentId(ctx.rootId, value)}
        aria-labelledby={buildTriggerId(ctx.rootId, value)}
        data-state={isActive ? 'active' : 'inactive'}
        hidden={!isActive}
        tabIndex={0}
        className={joinClasses(styles.content, className)}
        {...props}
      >
        {children}
      </div>
    );
  }
);

InternalRoot.displayName = 'Tabs.Root';
InternalList.displayName = 'Tabs.List';
InternalTrigger.displayName = 'Tabs.Trigger';
InternalContent.displayName = 'Tabs.Content';

export const TabsRoot = InternalRoot;
export const TabsList = InternalList;
export const TabsTrigger = InternalTrigger;
export const TabsContent = InternalContent;

/**
 * Tabs - Main export with compound components
 *
 * @example
 * <Tabs defaultValue="overview">
 *   <Tabs.List>
 *     <Tabs.Trigger value="overview">Overview</Tabs.Trigger>
 *     <Tabs.Trigger value="settings">Settings</Tabs.Trigger>
 *   </Tabs.List>
 *   <Tabs.Content value="overview">...</Tabs.Content>
 *   <Tabs.Content value="settings">...</Tabs.Content>
 * </Tabs>
 */
export const Tabs = Object.assign(TabsRoot, {
  Root: TabsRoot,
  List: TabsList,
  Trigger: TabsTrigger,
  Content: TabsContent,
});
",
}
`;

exports[`Tabs Component Snapshots > renders monolithic Tabs correctly 1`] = `
{
  "README.md": "# Tabs

Generated by Crucible v1.0.0 | Theme: minimal | Framework: react

## Variants
- \`default\`- \`underline\`- \`pills\`

## Sizes
- \`sm\`- \`md\`- \`lg\`

## States
- \`disabled\`

## CSS Variables Used

\`\`\`css
:root {
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);
  --card-border-radius: var(--radius-lg);
  --card-background-color: var(--color-surface);
  --card-border-color: var(--color-border);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --button-height-sm: calc(var(--spacing-unit) * 9);
  --button-height-md: calc(var(--spacing-unit) * 10);
  --button-height-lg: calc(var(--spacing-unit) * 11);
  --button-padding-x-sm: calc(var(--spacing-unit) * 3);
  --button-padding-x-md: calc(var(--spacing-unit) * 4);
  --button-padding-x-lg: calc(var(--spacing-unit) * 8);
  --button-border-radius: var(--radius-md);
  --button-font-weight: 500;
  --button-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --input-height: calc(var(--spacing-unit) * 10);
  --input-padding-x: calc(var(--spacing-unit) * 3);
  --input-border-radius: var(--radius-md);
  --input-border-color: var(--color-border);
  --input-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --form-group-gap: calc(var(--spacing-unit) * 5);
  --form-item-gap: calc(var(--spacing-unit) * 1.5);
  --form-label-color: var(--color-text);
  --form-label-weight: 500;
  --form-required-color: var(--color-destructive);
  --form-control-height-sm: calc(var(--spacing-unit) * 9);
  --form-control-height-md: calc(var(--spacing-unit) * 10);
  --form-control-height-lg: calc(var(--spacing-unit) * 11);
  --form-error-color: var(--color-destructive);
  --form-description-color: var(--color-text-muted);
  --form-description-size: 0.75rem;
  --form-radius: var(--radius-md);
  --form-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --Dialog-padding: calc(var(--spacing-unit) * 6);
  --Dialog-border-radius: var(--radius-lg);
  --Dialog-overlay-bg: rgba(0, 0, 0, 0.4);
  --Dialog-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
  --Dialog-z-index: 1000;
  --select-height: calc(var(--spacing-unit) * 10);
  --select-padding-x: calc(var(--spacing-unit) * 3);
  --select-border-radius: var(--radius-md);
  --select-option-padding: calc(var(--spacing-unit) * 2.5);
  --select-dropdown-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --select-z-index: 900;
  --table-row-height: calc(var(--spacing-unit) * 10);
  --table-header-height: calc(var(--spacing-unit) * 10);
  --table-border-radius: var(--radius-md);
  --table-pagination-height: calc(var(--spacing-unit) * 8);
  --table-virtual-overscan: 5;
  --table-cell-padding: calc(var(--spacing-unit) * 3);
  --table-row-hover-bg: var(--color-secondary);
  --table-striped-bg: var(--color-background);
  --popover-background: var(--color-surface);
  --popover-border: var(--color-border);
  --popover-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --popover-radius: var(--radius-md);
  --popover-padding: calc(var(--spacing-unit) * 2);
  --popover-z-index: 50;
  --tooltip-background: var(--color-surface);
  --tooltip-border: var(--color-border);
  --tooltip-text: var(--color-text);
  --tooltip-shadow: 0 4px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -1px rgba(0,0,0,0.06);
  --tooltip-radius: var(--radius-md);
  --tooltip-padding: calc(var(--spacing-unit) * 2);
  --tooltip-z-index: 60;
  --toast-background: var(--color-surface);
  --toast-border: var(--color-border);
  --toast-text: var(--color-text);
  --toast-text-muted: var(--color-text-muted);
  --toast-radius: var(--radius-md);
  --toast-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -2px rgba(0,0,0,0.05);
  --toast-padding: calc(var(--spacing-unit) * 4);
  --toast-gap: calc(var(--spacing-unit) * 2);
  --toast-z-index: 9999;
  --toast-success-bg: var(--color-success);
  --toast-error-bg: var(--color-destructive);
  --toast-warning-bg: #f59e0b;
  --toast-info-bg: var(--color-primary);
  --label-color: var(--color-text);
  --label-weight: 500;
  --label-required-color: var(--color-destructive);
  --label-gap: calc(var(--spacing-unit) * 1);
  --label-disabled-opacity: 0.6;
  --separator-color: var(--color-border);
  --separator-thickness: 1px;
  --separator-spacing: calc(var(--spacing-unit) * 2);
  --separator-label-color: var(--color-text-muted);
  --separator-label-gap: calc(var(--spacing-unit) * 2);
  --badge-radius: var(--radius-sm);
  --badge-font-size: 0.75rem;
  --badge-font-weight: 500;
  --badge-gap: calc(var(--spacing-unit) * 1);
  --badge-primary-bg: var(--color-primary);
  --badge-secondary-bg: var(--color-secondary);
  --badge-success-bg: var(--color-success);
  --badge-warning-bg: #f59e0b;
  --badge-destructive-bg: var(--color-destructive);
  --badge-on-color: #ffffff;
  --skeleton-base-color: var(--color-secondary);
  --skeleton-highlight-color: var(--color-background);
  --skeleton-radius: var(--radius-md);
  --skeleton-duration: 1.5s;
  --avatar-radius: var(--radius-md);
  --avatar-fallback-bg: var(--color-secondary);
  --avatar-fallback-color: var(--color-text);
  --avatar-font-weight: 600;
  --textarea-min-height: calc(var(--spacing-unit) * 20);
  --textarea-padding-x: calc(var(--spacing-unit) * 3);
  --textarea-padding-y: calc(var(--spacing-unit) * 2);
  --textarea-radius: var(--radius-md);
  --textarea-border-color: var(--color-border);
  --textarea-transition: border-color 0.2s ease, box-shadow 0.2s ease;
  --checkbox-size: calc(var(--spacing-unit) * 4);
  --checkbox-radius: var(--radius-sm);
  --checkbox-accent: var(--color-primary);
  --checkbox-label-color: var(--color-text);
  --checkbox-gap: calc(var(--spacing-unit) * 2);
  --switch-track-off: var(--color-secondary);
  --switch-track-on: var(--color-primary);
  --switch-thumb: #ffffff;
  --switch-transition: background-color 0.2s ease, transform 0.2s ease;
  --switch-label-color: var(--color-text);
  --switch-gap: calc(var(--spacing-unit) * 2);
  --alert-padding: calc(var(--spacing-unit) * 3);
  --alert-radius: var(--radius-md);
  --alert-gap: calc(var(--spacing-unit) * 3);
  --alert-info-accent: var(--color-primary);
  --alert-success-accent: var(--color-success);
  --alert-warning-accent: #f59e0b;
  --alert-destructive-accent: var(--color-destructive);
  --progress-radius: 9999px;
  --progress-track-bg: var(--color-secondary);
  --progress-bar-bg: var(--color-primary);
  --progress-transition: width 0.3s ease;
  --breadcrumb-gap: calc(var(--spacing-unit) * 2);
  --breadcrumb-link-color: var(--color-text-muted);
  --breadcrumb-active-color: var(--color-text);
  --breadcrumb-separator-color: var(--color-text-muted);
  --radio-size: calc(var(--spacing-unit) * 4);
  --radio-accent: var(--color-primary);
  --radio-label-color: var(--color-text);
  --radio-gap: calc(var(--spacing-unit) * 2);
  --radio-group-gap: calc(var(--spacing-unit) * 2);
  --accordion-border-color: var(--color-border);
  --accordion-trigger-color: var(--color-text);
  --accordion-trigger-hover-bg: var(--color-secondary);
  --accordion-trigger-padding-y: calc(var(--spacing-unit) * 3);
  --accordion-trigger-padding-x: calc(var(--spacing-unit) * 2);
  --accordion-content-padding-y: calc(var(--spacing-unit) * 3);
  --accordion-radius: var(--radius-md);
  --accordion-transition: background-color 0.2s ease;
  --tabs-list-gap: calc(var(--spacing-unit) * 1);
  --tabs-trigger-height-sm: calc(var(--spacing-unit) * 8);
  --tabs-trigger-height-md: calc(var(--spacing-unit) * 9);
  --tabs-trigger-height-lg: calc(var(--spacing-unit) * 11);
  --tabs-trigger-padding-x: calc(var(--spacing-unit) * 3);
  --tabs-trigger-radius: var(--radius-md);
  --tabs-trigger-color: var(--color-text-muted);
  --tabs-trigger-active-color: var(--color-text);
  --tabs-trigger-hover-bg: var(--color-secondary);
  --tabs-trigger-active-bg: var(--color-surface);
  --tabs-trigger-active-indicator: var(--color-primary);
  --tabs-indicator-thickness: 2px;
  --tabs-content-padding-y: calc(var(--spacing-unit) * 4);
  --tabs-transition: background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
  --color-primary: #000;
  --color-secondary: #F3F2FF;
  --color-surface: #fff;
  --color-background: #F8F9FA;
  --color-border: #E2E1F0;
  --color-text: #1A1A2E;
  --color-text-muted: #6B6B8A;
  --color-destructive: #E24B4A;
  --color-success: #1D9E75;
  --color-primary-foreground: #fff;
  --color-secondary-foreground: #1A1A2E;
  --color-destructive-foreground: #fff;
  --color-accent-foreground: #1A1A2E;
  --foreground: #1A1A2E;
  --radius-sm: 4px;
  --radius-md: 4px;
  --radius-lg: 12px;
  --spacing-unit: 4px;
  --font-family: system-ui, sans-serif;
  --font-size-base: 16px;
}
\`\`\`


---

_This file is auto-generated. Edit the source template or run \`crucible upgrade\` after updating your config._
",
  "Tabs.module.css": ".root {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.root[data-orientation='vertical'] {
  flex-direction: row;
  align-items: flex-start;
}

.list {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: var(--tabs-list-gap, calc(var(--spacing-unit) * 1));
  flex-shrink: 0;
}

.root[data-orientation='vertical'] .list {
  flex-direction: column;
  align-items: stretch;
}

.trigger {
  all: unset;
  box-sizing: border-box;
  cursor: pointer;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  height: var(--tabs-trigger-h, calc(var(--spacing-unit) * 9));
  padding: 0 var(--tabs-trigger-padding-x, calc(var(--spacing-unit) * 3));
  border-radius: var(--tabs-trigger-radius, var(--radius-md));
  color: var(--tabs-trigger-color, var(--color-text-muted));
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
  font-size: 0.875rem;
  font-weight: 500;
  white-space: nowrap;
  transition: var(--tabs-transition, background-color 0.2s ease, color 0.2s ease, box-shadow 0.2s ease);
}

.trigger:hover:not([data-disabled]):not([data-state='active']) {
  background-color: var(--tabs-trigger-hover-bg, var(--color-secondary));
  color: var(--tabs-trigger-active-color, var(--color-text));
}

.trigger[data-state='active'] {
  color: var(--tabs-trigger-active-color, var(--color-text));
}

.trigger[data-disabled] {
  opacity: 0.5;
  cursor: not-allowed;
}

.trigger:focus-visible {
  outline: 2px solid var(--color-primary);
  outline-offset: 3px;
}

/* Variants */
.variant-default .list {
  border-bottom: 1px solid var(--color-border, #e5e7eb);
}

.variant-default .trigger[data-state='active'] {
  box-shadow: inset 0 calc(-1 * var(--tabs-indicator-thickness, 2px)) 0
    var(--tabs-trigger-active-indicator, var(--color-primary));
}

.root[data-orientation='vertical'].variant-default .list {
  border-bottom: none;
  border-right: 1px solid var(--color-border, #e5e7eb);
}

.root[data-orientation='vertical'].variant-default .trigger[data-state='active'] {
  box-shadow: inset calc(-1 * var(--tabs-indicator-thickness, 2px)) 0 0
    var(--tabs-trigger-active-indicator, var(--color-primary));
}

.variant-underline .list {
  border-bottom: 1px solid var(--color-border, #e5e7eb);
}

.variant-underline .trigger {
  border-radius: 0;
}

.variant-underline .trigger[data-state='active'] {
  box-shadow: inset 0 calc(-1 * var(--tabs-indicator-thickness, 2px)) 0
    var(--tabs-trigger-active-indicator, var(--color-primary));
}

.variant-pills .trigger[data-state='active'] {
  background-color: var(--tabs-trigger-active-bg, var(--color-surface));
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08);
}

/* Sizes */
.size-sm .trigger {
  height: var(--tabs-trigger-h, calc(var(--spacing-unit) * 8));
  font-size: 0.8125rem;
}

.size-md .trigger {
  height: var(--tabs-trigger-h, calc(var(--spacing-unit) * 9));
  font-size: 0.875rem;
}

.size-lg .trigger {
  height: var(--tabs-trigger-h, calc(var(--spacing-unit) * 11));
  font-size: 0.9375rem;
}

.content {
  flex: 1;
  padding-block: var(--tabs-content-padding-y, calc(var(--spacing-unit) * 4));
  color: var(--color-text, #1A1A2E);
  font-family: var(--font-family, system-ui, -apple-system, sans-serif);
  outline: none;
}

.root[data-orientation='vertical'] .content {
  padding-block: 0;
  padding-inline: var(--tabs-content-padding-y, calc(var(--spacing-unit) * 4));
}

.content[hidden] {
  display: none;
}

@media (prefers-reduced-motion: reduce) {
  .trigger {
    transition: none;
  }
}
",
  "Tabs.tsx": "import React, {
  createContext,
  useContext,
  useState,
  useMemo,
  useCallback,
  useEffect,
  useRef,
  useId,
} from 'react';
import styles from './Tabs.module.css';
export type TabsSize = 'sm' | 'md' | 'lg';
export type TabsVariant = 'default' | 'underline' | 'pills';
export type TabsOrientation = 'horizontal' | 'vertical';
export type TabsActivationMode = 'manual' | 'automatic';

export interface TabsOptions {
  value?: string;
  defaultValue?: string;
  onValueChange?: (value: string) => void;
  orientation?: TabsOrientation;
  activationMode?: TabsActivationMode;
}

interface TriggerRegistration {
  value: string;
  disabled: boolean;
  el: HTMLButtonElement | null;
}

export function useTabs({
  value: controlledValue,
  defaultValue,
  onValueChange,
  orientation = 'horizontal',
  activationMode = 'manual',
}: TabsOptions = {}) {
  const [uncontrolledValue, setUncontrolledValue] = useState<string | undefined>(defaultValue);
  const value = controlledValue ?? uncontrolledValue;
  const rootId = useId();
  const triggersRef = useRef<Map<string, TriggerRegistration>>(new Map());
  const orderRef = useRef<string[]>([]);

  const setValue = useCallback(
    (next: string) => {
      if (controlledValue === undefined) {
        setUncontrolledValue(next);
      }
      onValueChange?.(next);
    },
    [controlledValue, onValueChange]
  );

  const registerTrigger = useCallback(
    (val: string, disabled: boolean, el: HTMLButtonElement | null) => {
      const map = triggersRef.current;
      if (el === null) {
        map.delete(val);
        orderRef.current = orderRef.current.filter((v) => v !== val);
        return;
      }
      if (!map.has(val)) {
        orderRef.current.push(val);
      }
      map.set(val, { value: val, disabled, el });
    },
    []
  );

  const focusTrigger = useCallback((val: string) => {
    const entry = triggersRef.current.get(val);
    entry?.el?.focus();
  }, []);

  const moveFocus = useCallback(
    (current: string, direction: 1 | -1) => {
      const order = orderRef.current;
      const enabled = order.filter((v) => !triggersRef.current.get(v)?.disabled);
      if (enabled.length === 0) return null;
      const idx = enabled.indexOf(current);
      const nextIdx = idx === -1 ? 0 : (idx + direction + enabled.length) % enabled.length;
      const next = enabled[nextIdx];
      focusTrigger(next);
      return next;
    },
    [focusTrigger]
  );

  const focusEdge = useCallback(
    (edge: 'first' | 'last') => {
      const enabled = orderRef.current.filter((v) => !triggersRef.current.get(v)?.disabled);
      if (enabled.length === 0) return null;
      const next = edge === 'first' ? enabled[0] : enabled[enabled.length - 1];
      focusTrigger(next);
      return next;
    },
    [focusTrigger]
  );

  return useMemo(
    () => ({
      value,
      setValue,
      orientation,
      activationMode,
      rootId,
      registerTrigger,
      focusTrigger,
      moveFocus,
      focusEdge,
    }),
    [value, setValue, orientation, activationMode, rootId, registerTrigger, focusTrigger, moveFocus, focusEdge]
  );
}

type TabsContextType = ReturnType<typeof useTabs> | null;
const TabsContext = createContext<TabsContextType>(null);

const useTabsContext = () => {
  const context = useContext(TabsContext);
  if (context == null) {
    throw new Error('Tabs components must be wrapped in <Tabs.Root />');
  }
  return context;
};

const buildTriggerId = (rootId: string, value: string) =>
  \`\${rootId}-trigger-\${value.replace(/[^a-zA-Z0-9_-]/g, '_')}\`;
const buildContentId = (rootId: string, value: string) =>
  \`\${rootId}-content-\${value.replace(/[^a-zA-Z0-9_-]/g, '_')}\`;

const joinClasses = (...parts: Array<string | false | null | undefined>) =>
  parts.filter(Boolean).join(' ');

/**
 * Internal Tabs Components
 */
export interface TabsRootProps extends TabsOptions {
  children: React.ReactNode;
  variant?: TabsVariant;
  size?: TabsSize;
  className?: string;
}

const InternalRoot = React.forwardRef<HTMLDivElement, TabsRootProps>(
  function TabsRoot(
    { children, variant = 'default', size = 'md', className, ...options },
    ref
  ) {
    const tabs = useTabs(options);
    return (
      <TabsContext.Provider value={tabs}>
        <div
          ref={ref}
          className={joinClasses(
            styles.root,
            styles[\`variant-\${variant}\`],
            styles[\`size-\${size}\`],
            className
          )}
          data-orientation={tabs.orientation}
        >
          {children}
        </div>
      </TabsContext.Provider>
    );
  }
);

export interface TabsListProps extends React.HTMLAttributes<HTMLDivElement> {
  loop?: boolean;
}

const InternalList = React.forwardRef<HTMLDivElement, TabsListProps>(
  function TabsList({ children, className, onKeyDown, ...props }, ref) {
    const ctx = useTabsContext();

    const handleKeyDown = (e: React.KeyboardEvent<HTMLDivElement>) => {
      onKeyDown?.(e);
      if (e.defaultPrevented) return;

      const target = e.target as HTMLElement;
      const currentValue = target.getAttribute('data-value') ?? ctx.value ?? '';

      const isHorizontal = ctx.orientation === 'horizontal';
      const nextKey = isHorizontal ? 'ArrowRight' : 'ArrowDown';
      const prevKey = isHorizontal ? 'ArrowLeft' : 'ArrowUp';

      let nextValue: string | null = null;

      if (e.key === nextKey) {
        e.preventDefault();
        nextValue = ctx.moveFocus(currentValue, 1);
      } else if (e.key === prevKey) {
        e.preventDefault();
        nextValue = ctx.moveFocus(currentValue, -1);
      } else if (e.key === 'Home') {
        e.preventDefault();
        nextValue = ctx.focusEdge('first');
      } else if (e.key === 'End') {
        e.preventDefault();
        nextValue = ctx.focusEdge('last');
      }

      if (nextValue && ctx.activationMode === 'automatic') {
        ctx.setValue(nextValue);
      }
    };

    return (
      <div
        ref={ref}
        role="tablist"
        aria-orientation={ctx.orientation}
        className={joinClasses(styles.list, className)}
        onKeyDown={handleKeyDown}
        {...props}
      >
        {children}
      </div>
    );
  }
);

export interface TabsTriggerProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
  value: string;
}

const InternalTrigger = React.forwardRef<HTMLButtonElement, TabsTriggerProps>(
  function TabsTrigger(
    { value, disabled = false, className, onClick, children, ...props },
    propRef
  ) {
    const ctx = useTabsContext();
    const isActive = ctx.value === value;
    const innerRef = useRef<HTMLButtonElement | null>(null);

    const setRef = useCallback(
      (el: HTMLButtonElement | null) => {
        innerRef.current = el;
        if (typeof propRef === 'function') propRef(el);
        else if (propRef) (propRef as React.MutableRefObject<HTMLButtonElement | null>).current = el;
        ctx.registerTrigger(value, disabled, el);
      },
      [ctx, value, disabled, propRef]
    );

    useEffect(() => () => ctx.registerTrigger(value, disabled, null), [ctx, value, disabled]);

    const handleClick = (e: React.MouseEvent<HTMLButtonElement>) => {
      onClick?.(e);
      if (e.defaultPrevented || disabled) return;
      ctx.setValue(value);
    };

    return (
      <button
        ref={setRef}
        type="button"
        role="tab"
        id={buildTriggerId(ctx.rootId, value)}
        aria-selected={isActive}
        aria-controls={buildContentId(ctx.rootId, value)}
        data-state={isActive ? 'active' : 'inactive'}
        data-value={value}
        data-disabled={disabled || undefined}
        disabled={disabled}
        tabIndex={isActive ? 0 : -1}
        className={joinClasses(styles.trigger, className)}
        onClick={handleClick}
        {...props}
      >
        {children}
      </button>
    );
  }
);

export interface TabsContentProps extends React.HTMLAttributes<HTMLDivElement> {
  value: string;
  forceMount?: boolean;
}

const InternalContent = React.forwardRef<HTMLDivElement, TabsContentProps>(
  function TabsContent({ value, forceMount = false, className, children, ...props }, ref) {
    const ctx = useTabsContext();
    const isActive = ctx.value === value;

    if (!isActive && !forceMount) {
      return null;
    }

    return (
      <div
        ref={ref}
        role="tabpanel"
        id={buildContentId(ctx.rootId, value)}
        aria-labelledby={buildTriggerId(ctx.rootId, value)}
        data-state={isActive ? 'active' : 'inactive'}
        hidden={!isActive}
        tabIndex={0}
        className={joinClasses(styles.content, className)}
        {...props}
      >
        {children}
      </div>
    );
  }
);

InternalRoot.displayName = 'Tabs.Root';
InternalList.displayName = 'Tabs.List';
InternalTrigger.displayName = 'Tabs.Trigger';
InternalContent.displayName = 'Tabs.Content';

export interface TabsItem {
  value: string;
  label: React.ReactNode;
  content: React.ReactNode;
  disabled?: boolean;
}

export interface TabsProps extends TabsOptions {
  items: TabsItem[];
  variant?: TabsVariant;
  size?: TabsSize;
  className?: string;
}

/**
 * Tabs - Monolithic schema-driven wrapper
 *
 * @example
 * <Tabs
 *   defaultValue="overview"
 *   items={[
 *     { value: 'overview', label: 'Overview', content: <p>...</p> },
 *     { value: 'settings', label: 'Settings', content: <p>...</p> },
 *   ]}
 * />
 */
export const Tabs: React.FC<TabsProps> = ({
  items,
  variant,
  size,
  className,
  ...options
}) => {
  return (
    <InternalRoot variant={variant} size={size} className={className} {...options}>
      <InternalList>
        {items.map((item) => (
          <InternalTrigger key={item.value} value={item.value} disabled={item.disabled}>
            {item.label}
          </InternalTrigger>
        ))}
      </InternalList>
      {items.map((item) => (
        <InternalContent key={item.value} value={item.value}>
          {item.content}
        </InternalContent>
      ))}
    </InternalRoot>
  );
};
",
}
`;
